--- a/kube-enforcer/templates/trivy-clusterrolebinding.yaml
+++ b/kube-enforcer/templates/trivy-clusterrolebinding.yaml
@@ -1,20 +1,20 @@
 ---
-{{- if .Values.trivy.enabled }}
+{{- if .Values.tunnel.enabled }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: {{ .Values.trivy.appName }}
+  name: {{ .Values.tunnel.appName }}
   labels:
-    app.kubernetes.io/name: {{ .Values.trivy.appName }}
-    app.kubernetes.io/instance: {{ .Values.trivy.appName }}
-    app.kubernetes.io/version: {{ .Values.trivy.image.tag | quote }}
+    app.kubernetes.io/name: {{ .Values.tunnel.appName }}
+    app.kubernetes.io/instance: {{ .Values.tunnel.appName }}
+    app.kubernetes.io/version: {{ .Values.tunnel.image.tag | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ .Values.trivy.appName }}
+  name: {{ .Values.tunnel.appName }}
 subjects:
   - kind: ServiceAccount
-    name: {{ .Values.trivy.appName }}
+    name: {{ .Values.tunnel.appName }}
     namespace: {{ .Release.Namespace }}
 {{- end }}
