--- a/kube-enforcer/templates/trivy-resource-definition.yaml
+++ b/kube-enforcer/templates/trivy-resource-definition.yaml
@@ -1,5 +1,5 @@
 ---
-{{- if .Values.trivy.enabled }}
+{{- if .Values.tunnel.enabled }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
