--- a/kube-enforcer/templates/trivy-service-account.yaml
+++ b/kube-enforcer/templates/trivy-service-account.yaml
@@ -1,13 +1,13 @@
 ---
-{{- if .Values.trivy.enabled }}
+{{- if .Values.tunnel.enabled }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "serviceAccountTrivy" . }}
+  name: {{ template "serviceAccountTunnel" . }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ .Values.trivy.appName }}
-    app.kubernetes.io/instance: {{ .Values.trivy.appName }}
-    app.kubernetes.io/version: {{ .Values.trivy.image.tag | quote }}
+    app.kubernetes.io/name: {{ .Values.tunnel.appName }}
+    app.kubernetes.io/instance: {{ .Values.tunnel.appName }}
+    app.kubernetes.io/version: {{ .Values.tunnel.image.tag | quote }}
     app.kubernetes.io/managed-by: {{ .Release.Service | quote }}
 {{- end }}
