--- a/kube-enforcer/Chart.yaml
+++ b/kube-enforcer/Chart.yaml
@@ -17,5 +17,5 @@ keywords:
 - khulnasoft
 home: https://www.khulnasoft.com/
 maintainers:
-- name: Khulnasoft Security, Inc.
+- name: KhulnaSoft Security, Inc.
   email: support@khulnasoft.com
