--- a/gateway/Chart.yaml
+++ b/gateway/Chart.yaml
@@ -6,5 +6,5 @@ version: "2022.4.14"
 icon: https://avatars3.githubusercontent.com/u/43526139?s=200&v=4
 home: https://www.khulnasoft.com/
 maintainers:
-- name: Khulnasoft Security, Inc.
+- name: KhulnaSoft Security, Inc.
   email: support@khulnasoft.com
