--- a/kube-enforcer/templates/crds/clusterconfigauditreports.yaml
+++ b/kube-enforcer/templates/crds/clusterconfigauditreports.yaml
@@ -1,4 +1,5 @@
 ---
+{% raw %}
 {{- if and (ge (atoi (.Capabilities.KubeVersion.Minor | replace "+" "")) 19 ) .Values.starboard.enabled .Values.starboard.crds.enabled }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -36,7 +37,9 @@ spec:
           name: Pass
           priority: 1
           description: The number of checks that passed
-      schema:
+{% endraw %}
+       schema:
+{% raw %}
         openAPIV3Schema:
           x-kubernetes-preserve-unknown-fields: true
           type: object
