--- a/kube-enforcer/templates/crds/configauditreports.yaml
+++ b/kube-enforcer/templates/crds/configauditreports.yaml
@@ -1,4 +1,5 @@
 ---
+{% raw %}
 {{- if and (ge (atoi (.Capabilities.KubeVersion.Minor | replace "+" "")) 19 ) .Values.starboard.enabled .Values.starboard.crds.enabled }}
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
@@ -55,3 +56,4 @@ spec:
     shortNames:
       - configaudit
 {{- end }}
+{% endraw %}
