--- a/kube-enforcer/templates/kube-enforcer-priorityclass.yaml
+++ b/kube-enforcer/templates/kube-enforcer-priorityclass.yaml
@@ -1,6 +1,6 @@
 {{- if .Values.priorityClass.create }}
 apiVersion: scheduling.k8s.io/v1
-description: Used for Khulnasoft KubeEnforcer to be scheduled with higher priority.
+description: Used for KhulnaSoft KubeEnforcer to be scheduled with higher priority.
 kind: PriorityClass
 metadata:
   name: {{ template "priorityClass" . }}
